Ajustes Cargo Controller

--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.SalarioCargo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Escala.Id)
+                @Html.DisplayFor(modelItem => item.EscalaId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
