--- a/Views/Cargo/Details.cshtml
+++ b/Views/Cargo/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Escala)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Escala.Id)
+            @Html.DisplayFor(model => model.EscalaId)
         </dd>
     </dl>
 </div>
