Modificações do ponto

--- a/Views/Ponto/Details.cshtml
+++ b/Views/Ponto/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.Funcionario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Funcionario.Id)
+            @Html.DisplayFor(model => model.FuncionarioId)
         </dd>
     </dl>
 </div>
