--- a/Views/Ponto/Delete.cshtml
+++ b/Views/Ponto/Delete.cshtml
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.Funcionario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Funcionario.Id)
+            @Html.DisplayFor(model => model.FuncionarioId)
         </dd>
     </dl>
     
