--- a/Views/Ponto/Index.cshtml
+++ b/Views/Ponto/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Data)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Funcionario.Id)
+                @Html.DisplayFor(modelItem => item.FuncionarioId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
