Alterçaoes erro de ortografia da Bosh

--- a/Views/Funcionario/Create.cshtml
+++ b/Views/Funcionario/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CargoId" class="control-label"></label>
-                <select asp-for="CargoId" class ="form-control" asp-items="ViewBag.CargoId"></select>
+                <select asp-for="CargoId" class ="form-control" asp-items="ViewBag.DescricaoCargo"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
