--- a/Views/Funcionario/Index.cshtml
+++ b/Views/Funcionario/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.NomeFuncionario)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cargo.Id)
+                @Html.DisplayFor(modelItem => item.Cargo.DecricaoCargo)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
