--- a/Views/Cargo/Edit.cshtml
+++ b/Views/Cargo/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="DecricaoCargo" class="control-label"></label>
-                <input asp-for="DecricaoCargo" class="form-control" />
-                <span asp-validation-for="DecricaoCargo" class="text-danger"></span>
+                <label asp-for="DescricaoCargo" class="control-label"></label>
+                <input asp-for="DescricaoCargo" class="form-control" />
+                <span asp-validation-for="DescricaoCargo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SalarioCargo" class="control-label"></label>
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para a Lista</a>
 </div>
 
 @section Scripts {
