--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -7,13 +7,13 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar um novo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.DecricaoCargo)
+                @Html.DisplayNameFor(model => model.DescricaoCargo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.SalarioCargo)
@@ -28,7 +28,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.DecricaoCargo)
+                @Html.DisplayFor(modelItem => item.DescricaoCargo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SalarioCargo)
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.EscalaId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
