--- a/Views/Escala/Edit.cshtml
+++ b/Views/Escala/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Ediart</h1>
+<h1>Editar</h1>
 
 <h4>Escala</h4>
 <hr />
@@ -39,7 +39,7 @@
                 <span asp-validation-for="HorarioSaida" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
