--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.SalarioCargo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EscalaId)
+                @Html.DisplayFor(modelItem => item.Escala.DescricaoEscala)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
