--- a/Views/Funcionario/Delete.cshtml
+++ b/Views/Funcionario/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Cargo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cargo.DecricaoCargo )
+            @Html.DisplayFor(model => model.Cargo.DescricaoCargo)
         </dd>
     </dl>
     
