--- a/Views/Funcionario/Details.cshtml
+++ b/Views/Funcionario/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Cargo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cargo.DecricaoCargo)
+            @Html.DisplayFor(model => model.Cargo.DescricaoCargo)
         </dd>
     </dl>
 </div>
