--- a/Views/Funcionario/Edit.cshtml
+++ b/Views/Funcionario/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CargoId" class="control-label"></label>
-                <select asp-for="CargoId" class="form-control" asp-items="ViewBag.DecricaoCargo"></select>
+                <select asp-for="CargoId" class="form-control" asp-items="ViewBag.CargoId"></select>
                 <span asp-validation-for="CargoId" class="text-danger"></span>
             </div>
             <div class="form-group">
