--- a/Views/Escala/Edit.cshtml
+++ b/Views/Escala/Edit.cshtml
@@ -14,8 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="DescricaoEscala" class="control-label"></label>
-                <input asp-for="DescricaoEscala" class="form-control" />
+                <label asp-for="DescricaoHorario" class="control-label"></label>
+                <input asp-for="DescricaoHorario" class="form-control" />
                 <span asp-validation-for="DescricaoEscala" class="text-danger"></span>
             </div>
             <div class="form-group">
