--- a/Views/Cargo/Delete.cshtml
+++ b/Views/Cargo/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Escala)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Escala.DescricaoEscala)
+            @Html.DisplayFor(model => model.Escala.DescricaoHorario)
         </dd>
     </dl>
     
