--- a/Views/Escala/Delete.cshtml
+++ b/Views/Escala/Delete.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescricaoEscala)
+            @Html.DisplayNameFor(model => model.DescricaoHorario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DescricaoEscala)
+            @Html.DisplayFor(model => model.DescricaoHorario)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HorarioEntrada)
