--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<ProjetoFuncionarios.Models.Cargo>
+﻿<head>
+    <link rel="stylesheet" href="~/css/Cargo.css" asp-append-version="true" />
+</head>
+@model IEnumerable<ProjetoFuncionarios.Models.Cargo>
 
 @{
     ViewData["Title"] = "Index";
