--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -12,6 +12,15 @@
 <p>
     <a asp-action="Create">Criar um novo</a>
 </p>
+<div>
+    @using (Html.BeginForm("Index", "Cargo", FormMethod.Get))
+    {
+            <p>
+                Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
+                <input type="submit" value="Pesquisar" />
+            </p>
+    }
+</div>
 <table class="table">
     <thead>
         <tr>
