Criação da guia de pesquisa

--- a/Views/Funcionario/Index.cshtml
+++ b/Views/Funcionario/Index.cshtml
@@ -9,6 +9,15 @@
 <p>
     <a asp-action="Create">Criar um novo</a>
 </p>
+<div>
+    @using (Html.BeginForm("Index", "Funcionario", FormMethod.Get))
+    {
+        <p>
+            Digite aqui sua pesquisa : @Html.TextBox("pesquisa")
+            <input type="submit" value="Pesquisar" />
+        </p>
+    }
+</div>
 <table class="table">
     <thead>
         <tr>
