--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem Vindo</h1>
+    
+    <div><img class="Logo" height="271px " width="400px" height="100px" src="~/Imagens/Logo_pagina_home_Yonkus.png" /></div>
+
+    
+    
 </div>
