--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -16,8 +16,8 @@
     @using (Html.BeginForm("Index", "Cargo", FormMethod.Get))
     {
             <p>
-                Digite aqui sua pesquisa: @Html.TextBox("pesquisa")
-                <input type="submit" value="Pesquisar" />
+            @Html.TextBox("pesquisa", "", new{ @class = "pesquisaCargo", placeholder = "Digite sua pesquisa" })
+                <input type="submit" value="Pesquisar"/>
             </p>
     }
 </div>
