--- a/Views/Cargo/Create.cshtml
+++ b/Views/Cargo/Create.cshtml
@@ -1,7 +1,6 @@
-﻿<head>
-    <link rel="stylesheet" href="~/css/Cargo.css" asp-append-version="true" />
+﻿<head> href="~/css/Cargo.css" asp-append-version="true" />
 </head>
-@model ProjetoFuncionarios.Models.Cargo
+@model FuncionariosFinal.Models.Cargo
 
 @{
     ViewData["Title"] = "Create";
