--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<head>
     <link rel="stylesheet" href="~/css/Cargo.css" asp-append-version="true" />
 </head>
-@model IEnumerable<ProjetoFuncionarios.Models.Cargo>
+@model IEnumerable<Cargo>
 
 @{
     ViewData["Title"] = "Index";
