--- a/Views/Cargo/Create.cshtml
+++ b/Views/Cargo/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿<head>
     <link rel="stylesheet" href="~/css/Cargo.css" asp-append-version="true" />
 </head>
-@model ProjetoFuncionarios.Models.Cargo
+@model Cargo
 
 @{
     ViewData["Title"] = "Create";
