--- a/Views/Ponto/Index.cshtml
+++ b/Views/Ponto/Index.cshtml
@@ -9,6 +9,15 @@
 <p>
     <a asp-action="Create">Criar um novo</a>
 </p>
+<div>
+    @using (Html.BeginForm("Index", "Ponto", FormMethod.Get))
+    {
+        <p>
+            Digite aqui sua pesquisa: @Html.TextBox("Pesquisa")
+            <input type="submit" value="Pesquisar">
+        </p>
+    }
+</div>
 <table class="table">
     <thead>
         <tr>
