--- a/Views/Funcionario/Index.cshtml
+++ b/Views/Funcionario/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProjetoFuncionarios.Models.Funcionario>
+﻿@model IEnumerable<FuncionariosFinal.Models.Funcionario>
 
 @{
     ViewData["Title"] = "Index";
