Alterçao logo, menu e botao adicionar

--- a/Views/Funcionario/Index.cshtml
+++ b/Views/Funcionario/Index.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="TextEscalaeBut">
+    <h2>Funcionarios</h2>
 
-<p>
-    <a asp-action="Create">Criar um novo</a>
-</p>
+    <p>
+        <a asp-action="Create"><img class="But-add" src="~/Imagens/icon-add.png" /></a>
+    </p>
+</div>
 <table class="table">
     <thead>
         <tr>
