--- a/Views/Cargo/Index.cshtml
+++ b/Views/Cargo/Index.cshtml
@@ -7,17 +7,19 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="TextEscalaeBut">
+    <h2>Cargo</h2>
 
-<p>
-    <a asp-action="Create">Criar um novo</a>
-</p>
+    <p>
+        <a asp-action="Create"><img class="But-add" src="~/Imagens/icon-add.png" /></a>
+    </p>
+</div>
 <div>
     @using (Html.BeginForm("Index", "Cargo", FormMethod.Get))
     {
             <p>
             @Html.TextBox("pesquisa", "", new{ @class = "pesquisaCargo", placeholder = "Digite sua pesquisa" })
-                <input type="submit" value="Pesquisar"/>
+                <input class="But-BarraDePesquisa" type="submit" value="Pesquisar"/>
             </p>
     }
 </div>
