--- a/Views/Escala/Index.cshtml
+++ b/Views/Escala/Index.cshtml
@@ -4,17 +4,20 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="TextEscalaeBut">
+    <h2>Escala</h2>
 
-<p>
-    <a asp-action="Create">Criar um novo</a>
-</p>
+    <p>
+        <a asp-action="Create"><img class="But-add" src="~/Imagens/icon-add.png" /></a>
+    </p>
+</div>
+
 <div>
     @using (Html.BeginForm("Index", "Esacala", FormMethod.Get))
     {
         <p>
             Digite aqui sua pesquisa: @Html.TextBox("pesquisa", "", new{ @class = "pesquisaCargo", placeholder = "Digite sua pesquisa" })
-            <input type="submit" value="Pesquisar" />
+            <input  class=" But-BarraDePesquisa" type="submit" value="Pesquisar" />
         </p>
     }
 </div>
