--- a/Views/Ponto/Index.cshtml
+++ b/Views/Ponto/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 <div class="TextEscalaeBut">
-    <h2>Escala</h2>
+    <h2>Ponto</h2>
 
     <p>
         <a asp-action="Create"><img class="But-add" src="~/Imagens/icon-add.png" /></a>
