--- a/Views/Escala/Index.cshtml
+++ b/Views/Escala/Index.cshtml
@@ -16,7 +16,7 @@
     @using (Html.BeginForm("Index", "Esacala", FormMethod.Get))
     {
         <p>
-            Digite aqui sua pesquisa: @Html.TextBox("pesquisa", "", new{ @class = "pesquisaCargo", placeholder = "Digite sua pesquisa" })
+           @Html.TextBox("pesquisa", "", new{ @class = "pesquisaCargo", placeholder = "Digite sua pesquisa" })
             <input  class=" But-BarraDePesquisa" type="submit" value="Pesquisar" />
         </p>
     }
