--- a/Views/Escala/Delete.cshtml
+++ b/Views/Escala/Delete.cshtml
@@ -43,7 +43,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Deletar">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Deletar" class="btn btn-danger" /> |
         <a asp-action="Index">Voltar para a Lista</a>
