--- a/Views/Ponto/Delete.cshtml
+++ b/Views/Ponto/Delete.cshtml
@@ -49,7 +49,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Deletar">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Deletar" class="btn btn-danger" /> |
         <a asp-action="Index">Voltar para a lista</a>
